# pelican-webp-images

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
tests/: test_webp_images.py
webp_images/: __init__.py  webp_images.py
